add AutoLogin project

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,25 @@
-Java/*/target/
-log/
 bin/
+Classes/
+dump/
+Debug/
+Java/*/target/
 lib/
+log/
+Release/
+temp/
+tmp/
 .idea/
-*\.class
-*.swp
+.metadata/
+*.class
+*.exe
+*.idb
+*.ilk
+*.ipch
 *.log
 *.obj
 *.pch
 *.pdb
-*.idb
+*.swp
 *.tlog
 *.vcxproj*
-*.exe
-*.ilk
-*.ipch
 dependency-reduced-pom.xml
