Revert "add AutoLogin project"
This reverts commit 8e52a88ce4967485f4f5b467a6d158431567e2f1.

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,18 @@
-bin/
-Classes/
-dump/
-Debug/
 Java/*/target/
-lib/
 log/
-Release/
-temp/
-tmp/
+bin/
+lib/
 .idea/
-.metadata/
-*.class
-*.exe
-*.idb
-*.ilk
-*.ipch
+*\.class
+*.swp
 *.log
 *.obj
 *.pch
 *.pdb
-*.swp
+*.idb
 *.tlog
 *.vcxproj*
+*.exe
+*.ilk
+*.ipch
 dependency-reduced-pom.xml
